--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
         <div style="margin-left:10px; font-family:Source Sans Pro">
             <h3>Pendidikan</h3>
-            <table style="text-align: center">
+            <table style="text-align: center" width="100%">
+                <col style="40%">
+                <col style="60%">                
                 <tr>
-                <th width="120px">Tahun</th>
+                <th>Tahun</th>
                 <th>Sekolah</th>
                 </tr>
                 <tr>
