--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 
         <div style="margin-left:10px; font-family:Source Sans Pro">
             <h3>Pendidikan</h3>
-            <table style="text-align: center" width="100%">
-                <col style="40%">
-                <col style="60%">                
+            <table style="text-align: center">            
                 <tr>
-                <th>Tahun</th>
+                <th style="width: 120px">Tahun</th>
                 <th>Sekolah</th>
                 </tr>
                 <tr>
