delete placeholder in date

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <div style="line-height: 200%">
                 <form action="contact.html" method="GET">
                     <label for="tanggal">Tanggal :</label>
-                    <input type="date" placeholder="dd/mm/yyyy" name="tanggal"><br>
+                    <input type="date" name="tanggal"><br>
                     <label for="nama">Your Name :</label>
                     <input type="text" name="nama"><br>
                     <label for="email">Your Email :</label>
