--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <hr>
             <div style="line-height: 200%">
                 <form action="contact.html" method="GET">
-                    <label for="tanggal">Tanggal :</label>
+                    <label>Tanggal :</label>
                     <input type="date" name="tanggal"><br>
                     <label for="nama">Your Name :</label>
                     <input type="text" name="nama"><br>
