deleting for in label

--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
                 <form action="contact.html" method="GET">
                     <label>Tanggal :</label>
                     <input type="date" name="tanggal"><br>
-                    <label for="nama">Your Name :</label>
+                    <label>Your Name :</label>
                     <input type="text" name="nama"><br>
-                    <label for="email">Your Email :</label>
+                    <label>Your Email :</label>
                     <input type="text" name="email"><br>
-                    <label for="pesan">Your Massage :</label><br>
+                    <label>Your Massage :</label><br>
                     <textarea name="pesan" cols="30" rows="10"></textarea><br>
-                    <label for="warna">Warna Kesukaan :</label>
+                    <label>Warna Kesukaan :</label>
                     <input type="color" name="warna"><br>
                     <input type="radio" name="gender" value="man">Pria
                     <input type="radio" name="gender" value="woman">Wanita <br>
