--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <input type="color" name="warna"><br>
                     <input type="radio" name="gender" value="man">Pria
                     <input type="radio" name="gender" value="woman">Wanita <br>
-                    <label for="pendidikan">Pendidikan Terakhir :</label>
+                    <label>Pendidikan Terakhir :</label>
                     <select name="pendidikan">
                               <option value="1">TK</option>
                               <option value="2">SD/MI</option>
