--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="id">
     <head>
         <title>CV</title>
-
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <img src="images/ippang.jpg" alt="Gambar Tidak Tersedia" width="120" height="180" style="float:left; margin: 20px 30px 20px 20px">
+        <img src="images/ippang.jpg" alt="Gambar Tidak Tersedia" width="140" height="140" style="float:left; margin: 70px 30px 20px 20px">
         <div style="padding:10px 10px 10px 10px;">
             <br><br>
             <h1 style="font-family:Source Sans Pro;">Irfan Ripat</h1>
-            Mahasiswa IT yang berharap punya skill
+            <div style="font-family:Source Sans Pro;">
+                Mahasiswa IT yang berharap punya skill
+            </div> 
             <br><br><br><br>
         </div>
         <hr>
@@ -26,11 +28,12 @@
 
         <div style="margin-left:10px; font-family:Source Sans Pro">
             <h3>Pendidikan</h3>
-            <table style="text-align: center">            
+            <table style="text-align: center">
                 <tr>
-                <th style="width: 120px">Tahun</th>
-                <th>Sekolah</th>
+                    <th style="width: 120px">Tahun</th>
+                    <th>Sekolah</th>
                 </tr>
+                
                 <tr>
                     <td>2015-2011</td>
                     <td>SD Negeri 27 Padang-Padang</td>
@@ -66,6 +69,9 @@
         </div>
         <hr>
         <br>
-        <a href="contact.html" style="color: darkgreen; margin-left: 30px">Contact Me</a>
+        <div class="kontaks">
+            <a href="contact.html" style="color: darkgreen; margin-left: 30px">Contact Me</a>
+        </div>
+        <br><br><br>
     </body>
 </html>
